--- a/test.ipynb
+++ b/test.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cuden\\AppData\\Local\\Temp\\ipykernel_13044\\2446974936.py:45: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+      "C:\\Users\\cuden\\AppData\\Local\\Temp\\ipykernel_14368\\2446974936.py:45: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
       "  if ma == []:\n"
      ]
     },
@@ -157,6 +157,7 @@
     "            ma = np.concatenate((ma, i), axis=0)\n",
     "    return ma\n",
     "\n",
+    "\n",
     "def stairway(value, max_excursion, steps, row):\n",
     "    '''\n",
     "    value: wavelet\n",
@@ -166,12 +167,9 @@
     "    window = len(value) + 1 - max_excursion\n",
     "    ma = wavelet_to_moving_average(value, window)\n",
     "    get = ma[row]\n",
-    "    bins = np.linspace(np.min(get), np.max(get), steps)\n",
-    "\n",
-    "    # Compute the histogram of a dataset.\n",
-    "    hist, bins = np.histogram(get, bins = bins)\n",
-    "    # plt.stairs(hist, bins)\n",
-    "    return hist, bins\n",
+    "    max_\n",
+    "    \n",
+    "    return ma, hist, bins\n",
     "    \n",
     "\n",
     "# Plot a chosen row in the matrix\n",
@@ -180,7 +178,7 @@
     "        get = matrix[row]\n",
     "\n",
     "    if option == 'hist':\n",
-    "        # scaling bins to horizon range of MA\n",
+    "        # scaling bins according to horizon range of MA\n",
     "        bins = np.linspace(0, matrix.shape[-1], row)\n",
     "\n",
     "        # scaling hist by min and max value of MA\n",
@@ -234,7 +232,6 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
     "data = [[7], [-2], [9]]\n",
     "scaler = MinMaxScaler(feature_range=(0, 100))\n",
     "s_data = scaler.fit_transform(data)\n",
@@ -276,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
