changed the max_excursion parameter

--- a/test.ipynb
+++ b/test.ipynb
@@ -147,12 +147,12 @@
     "wav_file = 'wav/apple_and_lemmon.wav'\n",
     "row = 10\n",
     "window = 1000\n",
-    "max_excursion = 20\n",
     "bins = 10\n",
     "\n",
     "# computing part -------------------------------------------------------\n",
     "wavelet = wav_to_wavelet(wav_file)\n",
     "ma = wavelet_to_moving_average(wavelet, window)\n",
+    "max_excursion = ma[row].max()\n",
     "ma_hist = stairway(ma[row], bins, max_excursion)\n",
     "\n",
     "# Plot part -------------------------------------------------------------\n",
@@ -183,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
