3D plotting for MA and histogram

--- a/test.ipynb
+++ b/test.ipynb
@@ -189,6 +189,28 @@
     "    ax.set_title(f'Row {row} - Orange=source, Blue=averaged({window}), Green=histogram')\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for each_r in range(0, 10, 2):\n",
+    "    print(each_r)"
+   ]
   }
  ],
  "metadata": {
