clean test.ipynb file

--- a/test.ipynb
+++ b/test.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test straight function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,141 +95,6 @@
     "plt.scatter(x1, y1, c='r')\n",
     "plt.title(f'After being straighted - dis={dis}')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from scipy.io import wavfile\n",
-    "from ssqueezepy import ssq_cwt\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "import sys\n",
-    "\n",
-    "def scaler(array, min_, max_):\n",
-    "    '''\n",
-    "    array: input\n",
-    "    min_, max_: range of scaling\n",
-    "    '''\n",
-    "    array = array.reshape((-1, 1))\n",
-    "    scaler = MinMaxScaler(feature_range=(min_, max_))\n",
-    "    s_data = scaler.fit_transform(array)\n",
-    "    s_data = np.squeeze(s_data)\n",
-    "    return s_data\n",
-    "\n",
-    "# Get wavelet from .wav file\n",
-    "def wav_to_wavelet(path):\n",
-    "    '''\n",
-    "    path: Direction to .wav file\n",
-    "    '''\n",
-    "    sample_rate, x = wavfile.read(path) \n",
-    "    twx, wx, *_ = ssq_cwt(x)  # use wx\n",
-    "    print(f'shape: {wx.shape}')\n",
-    "    return np.abs(wx)\n",
-    "\n",
-    "# Moving average function\n",
-    "def moving_average(array, window):\n",
-    "    '''\n",
-    "    array: short array have window length\n",
-    "    window: predefine value\n",
-    "    '''\n",
-    "    ret = np.cumsum(array, dtype=float)\n",
-    "    ret[window:] = ret[window:] - ret[:-window]\n",
-    "    return ret[window - 1:] / window\n",
-    "\n",
-    "# Moving average for wavelet\n",
-    "def wavelet_to_moving_average(matrix, window):\n",
-    "    '''\n",
-    "    matrix: a set of short array\n",
-    "    window: predefine value\n",
-    "    '''\n",
-    "    ma = []\n",
-    "    for i in matrix:\n",
-    "        i = moving_average(i, window)\n",
-    "        i = np.expand_dims(i, axis=0)\n",
-    "        if ma == []:\n",
-    "            ma = i\n",
-    "        else:\n",
-    "            ma = np.concatenate((ma, i), axis=0)\n",
-    "    return ma\n",
-    "\n",
-    "\n",
-    "# def stairway(ma_row, bins, max_excursion):\n",
-    "#     '''\n",
-    "#     ma_row: a chosen row of MA\n",
-    "#     bins: number of bins\n",
-    "#     max_excursion: max chosen number for histogram\n",
-    "\n",
-    "#     Note:\n",
-    "#     - Purpose: Get index according to each range \n",
-    "#     - for example: '0 for range 0...249, 1 for 250...499, 2 for 500...749, 3 for 750... infinit\n",
-    "#     '''\n",
-    "#     range_ = np.linspace(0, max_excursion, bins).tolist()\n",
-    "#     min_ma = np.min(ma_row)\n",
-    "#     max_ma = np.max(ma_row)\n",
-    "    \n",
-    "#     if max_ma > range_[-1]:\n",
-    "#         range_[-1] = max_ma\n",
-    "#     pair_ = [range_[i:i+2] for i in range(bins-1)]\n",
-    "\n",
-    "#     ma_hist = []\n",
-    "#     for va in ma_row:\n",
-    "#         for each_pair in pair_:\n",
-    "#             if each_pair[0] < va < each_pair[1]:\n",
-    "#                 ma_hist.append(pair_.index(each_pair)) \n",
-    "    \n",
-    "#     # scaling histogram\n",
-    "#     ma_hist = np.array(ma_hist)\n",
-    "#     ma_hist = ma_hist.reshape(-1, 1)\n",
-    "#     scaler = MinMaxScaler(feature_range=(min_ma, max_ma))\n",
-    "#     ma_hist = scaler.fit_transform(ma_hist)\n",
-    "#     ma_hist = ma_hist.reshape(-1, )\n",
-    "#     return ma_hist   \n",
-    "\n",
-    "def stairway(ma_row, bin_count, max_excursion):\n",
-    "    bins = np.linspace(0, max_excursion, bin_count)\n",
-    "    dig = (np.digitize(ma_row, bins) - 1) * (max_excursion / bin_count)\n",
-    "    return dig \n",
-    "\n",
-    "# Plot all visualizations\n",
-    "def plot_row(row, ax, c, matrix=None, option=None, hist=None, width=None):\n",
-    "    if np.max(matrix) != None:\n",
-    "        get = matrix[row]\n",
-    "\n",
-    "    if np.max(hist) != None:\n",
-    "        ax.plot(hist, c=c)\n",
-    "    else:\n",
-    "        ax.plot(get, c=c)\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    if len(sys.argv) != 3:\n",
-    "        print('Usage: python moving_average.py <path to wav file> <row number>')\n",
-    "        sys.exit(-1)\n",
-    "\n",
-    "    wav_file = sys.argv[1]\n",
-    "    row = int(sys.argv[2])\n",
-    "    window = 1000\n",
-    "    max_excursion = 20\n",
-    "    bins = 10\n",
-    "\n",
-    "    # computing part -------------------------------------------------------\n",
-    "    wavelet = wav_to_wavelet(wav_file)\n",
-    "    ma = wavelet_to_moving_average(wavelet, window)\n",
-    "    ma_hist = stairway(wavelet_to_moving_average(wavelet, window)[row], bins, max_excursion)\n",
-    "\n",
-    "    # Plot part -------------------------------------------------------------\n",
-    "    fig = plt.figure()  \n",
-    "    ax = fig.add_subplot()\n",
-    "    plot_row(row, ax, 'bisque', matrix=wavelet)\n",
-    "    plot_row(row, ax, 'lightsteelblue', matrix=ma)\n",
-    "    plot_row(row, ax, 'g', hist=ma_hist, width=0.4)\n",
-    "\n",
-    "    ax.set_title(f'Row {row} - Orange=source, Blue=averaged({window}), Green=histogram')\n",
-    "    plt.show()"
    ]
   }
  ],
