a new receiver function

--- a/test.ipynb
+++ b/test.ipynb
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test receiver() function"
+    "# 3) Test receiver() function"
    ]
   },
   {
