test yield with functions

--- a/test.ipynb
+++ b/test.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -154,8 +154,9 @@
     }
    ],
    "source": [
-    "from utils.tools import audio_source\n",
     "import numpy as np\n",
+    "from scipy.io import wavfile\n",
+    "\n",
     "\n",
     "def audio_source(name, window):\n",
     "    sample_rate, samples = wavfile.read(name)\n",
@@ -168,28 +169,18 @@
     "\n",
     "    print('len(samples) == end?', len(samples) == end)\n",
     "\n",
-    "def min_(data):\n",
+    "def min_(data, s=False):\n",
     "    yield np.min(data)\n",
     "\n",
-    "def max_(data):\n",
+    "def max_(data, i=1):\n",
     "    yield np.max(data)\n",
     "\n",
     "def length_(data):\n",
     "    yield len(data)\n",
     "\n",
     "for data in audio_source('wav/apple_and_lemmon.wav', 7000):\n",
-    "    max_e = [i for i in max_(data)]\n",
-    "    min_e = [i for i in min_(data)]\n",
-    "    length_e = [i for i in length_(data)]\n",
-    "    print(f'\\nMin: {min_e[0]}, max: {max_e[0]}, length {length_e[0]}')"
+    "    print(f'\\nMin: {next(min_(data))}, max: {next(max_(data))}, length {next(length_(data))}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
