--- a/test.ipynb
+++ b/test.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -179,8 +179,76 @@
     "    yield len(data)\n",
     "\n",
     "for data in audio_source('wav/apple_and_lemmon.wav', 7000):\n",
-    "    print(f'\\nMin: {next(min_(data))}, max: {next(max_(data))}, length {next(length_(data))}')"
+    "    mi = next(min_(data))\n",
+    "    ma = next(max_(data))\n",
+    "    le = next(length_(data))\n",
+    "    print(f'\\nMin: {mi}, max: {ma}, length {le}')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4) Test ma(), stair() and stra() while wav_to_wavelet() using yield"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of stair wave:  (277, 28377)\n",
+      "Shape of straight wave (277, 28377)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils.tools import stairway, stra, wavelet_to_moving_average\n",
+    "from os.path import join\n",
+    "from os import listdir\n",
+    "import numpy as np\n",
+    "from scipy.io import wavfile\n",
+    "from ssqueezepy import ssq_cwt\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt \n",
+    "from sklearn.neighbors import NearestCentroid\n",
+    "\n",
+    "# Get wavelet from .wav file\n",
+    "def wav_to_wavelet(path):\n",
+    "    '''\n",
+    "    path: Direction to .wav file\n",
+    "    '''\n",
+    "    sample_rate, x = wavfile.read(path) \n",
+    "    twx, wx, *_ = ssq_cwt(x)  # use wx\n",
+    "    yield np.abs(wx)\n",
+    "\n",
+    "path = 'wav/'\n",
+    "window = 1000 # pooling window in MA function\n",
+    "bins = 10 # number of bins in stairway function\n",
+    "low_row = 150 # get lower limit row\n",
+    "up_row = 155 # get upper limit row\n",
+    "dis = 1000 # distance between columns in stra function\n",
+    "\n",
+    "for name in listdir(path):\n",
+    "    dir = join(path, name)\n",
+    "    ma_hist = stairway(wavelet_to_moving_average(next(wav_to_wavelet(dir)), window), bins)\n",
+    "    print('Shape of stair wave: ', ma_hist.shape)\n",
+    "    ma_hist_stra = stra(ma_hist, dis = dis)\n",
+    "    print('Shape of straight wave', ma_hist_stra.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
