--- a/test.ipynb
+++ b/test.ipynb
@@ -195,60 +195,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of stair wave:  (277, 28377)\n",
-      "Shape of straight wave (277, 28377)\n"
+      "Shape of stair segment 1: (261, 6001)\n",
+      "Shape of straight segment 1: (261, 6001)\n",
+      "\n",
+      "Shape of stair segment 2: (261, 6001)\n",
+      "Shape of straight segment 2: (261, 6001)\n",
+      "\n",
+      "Shape of stair segment 3: (261, 6001)\n",
+      "Shape of straight segment 3: (261, 6001)\n",
+      "\n",
+      "Shape of stair segment 4: (261, 6001)\n",
+      "Shape of straight segment 4: (261, 6001)\n",
+      "\n",
+      "Shape of stair segment 5: (237, 377)\n",
+      "Shape of straight segment 5: (237, 377)\n",
+      "\n",
+      "len(samples) == end? True\n"
      ]
     }
    ],
    "source": [
-    "from utils.tools import stairway, stra, wavelet_to_moving_average\n",
-    "from os.path import join\n",
-    "from os import listdir\n",
+    "from utils.tools import stairway, wavelet_to_moving_average, matrix_to_vectors\n",
     "import numpy as np\n",
     "from scipy.io import wavfile\n",
     "from ssqueezepy import ssq_cwt\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt \n",
-    "from sklearn.neighbors import NearestCentroid\n",
     "\n",
     "# Get wavelet from .wav file\n",
-    "def wav_to_wavelet(path):\n",
+    "def wav_to_wavelet(x):\n",
     "    '''\n",
-    "    path: Direction to .wav file\n",
+    "    x: segment data (1D shape)\n",
     "    '''\n",
-    "    sample_rate, x = wavfile.read(path) \n",
     "    twx, wx, *_ = ssq_cwt(x)  # use wx\n",
     "    yield np.abs(wx)\n",
     "\n",
-    "path = 'wav/'\n",
-    "window = 1000 # pooling window in MA function\n",
-    "bins = 10 # number of bins in stairway function\n",
-    "low_row = 150 # get lower limit row\n",
-    "up_row = 155 # get upper limit row\n",
-    "dis = 1000 # distance between columns in stra function\n",
+    "def stra(matrix, dis = 5):\n",
+    "    shape = matrix.shape\n",
+    "    x, y = matrix_to_vectors(matrix)\n",
+    "    x_list = np.array(np.arange(np.min(x), np.max(x), dis))\n",
+    "    y_list = np.array(np.arange(np.min(y), np.max(y), dis))\n",
+    "    x_1, y_1 = np.meshgrid(x_list, y_list)   # a grid is created by standard straighten\n",
     "\n",
-    "for name in listdir(path):\n",
-    "    dir = join(path, name)\n",
-    "    ma_hist = stairway(wavelet_to_moving_average(next(wav_to_wavelet(dir)), window), bins)\n",
-    "    print('Shape of stair wave: ', ma_hist.shape)\n",
+    "    x_train = np.array([x_1[:, i] for i in range(x_1.shape[1])]).reshape(-1, ).astype(np.int32)\n",
+    "    y_train = np.array([y_1[:, i] for i in range(y_1.shape[1])]).reshape(-1, )\n",
+    "\n",
+    "    y_train = np.concatenate((y_train.reshape(-1, 1), x_train.reshape(-1, 1)), axis=-1)\n",
+    "    if len(np.unique(x_train)) < 2:\n",
+    "        return matrix\n",
+    "    ################################### Train with ML ###################################\n",
+    "    # This standard data ((y_train, x_train), x_train) is trained with a Machine Learning (ML) model(NearestCentroid). \n",
+    "    # After that, using the machine learning\n",
+    "    # model predict original data ((y, x), y)\n",
+    "    clf = NearestCentroid()\n",
+    "    clf.fit(y_train, x_train)\n",
+    "    x = clf.predict(np.concatenate((y.reshape(-1, 1), x.reshape(-1, 1)), axis=-1))\n",
+    "    return x.reshape(shape)\n",
+    "\n",
+    "def audio_source(path, sampling_window):\n",
+    "    sample_rate, samples = wavfile.read(path)\n",
+    "    begin = 0\n",
+    "\n",
+    "    while begin < len(samples):\n",
+    "        end = min(begin + sampling_window, len(samples))\n",
+    "        yield samples[begin:end]\n",
+    "        begin = end\n",
+    "\n",
+    "    print('len(samples) == end?', len(samples) == end)\n",
+    "    \n",
+    "path = 'wav/apple_and_lemmon.wav'\n",
+    "window = 1000 # pooling window in MA function\n",
+    "sampling_window = 7000\n",
+    "bins = 10 # number of bins in stairway function\n",
+    "dis = 200 # distance between columns in stra function\n",
+    "\n",
+    "for idx, segment in enumerate(audio_source(path, sampling_window)):\n",
+    "    ma_hist = stairway(wavelet_to_moving_average(next(wav_to_wavelet(segment)), window), bins)\n",
+    "    print(f'Shape of stair segment {idx+1}: {ma_hist.shape}')\n",
     "    ma_hist_stra = stra(ma_hist, dis = dis)\n",
-    "    print('Shape of straight wave', ma_hist_stra.shape)"
+    "    print(f'Shape of straight segment {idx+1}: {ma_hist_stra.shape}\\n')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -267,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
