--- a/test.ipynb
+++ b/test.ipynb
@@ -195,46 +195,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of stair segment 1: (261, 6001)\n",
-      "Shape of straight segment 1: (261, 6001)\n",
+      "Shape of stair segment 1: (245, 1401)\n",
+      "Shape of straight segment 1: (245, 1401)\n",
       "\n",
-      "Shape of stair segment 2: (261, 6001)\n",
-      "Shape of straight segment 2: (261, 6001)\n",
+      "Shape of stair segment 2: (245, 1401)\n",
+      "Shape of straight segment 2: (245, 1401)\n",
       "\n",
-      "Shape of stair segment 3: (261, 6001)\n",
-      "Shape of straight segment 3: (261, 6001)\n",
+      "Shape of stair segment 3: (245, 1401)\n",
+      "Shape of straight segment 3: (245, 1401)\n",
       "\n",
-      "Shape of stair segment 4: (261, 6001)\n",
-      "Shape of straight segment 4: (261, 6001)\n",
+      "Shape of stair segment 4: (245, 1401)\n",
+      "Shape of straight segment 4: (245, 1401)\n",
       "\n",
-      "Shape of stair segment 5: (237, 377)\n",
-      "Shape of straight segment 5: (237, 377)\n",
+      "Shape of stair segment 5: (245, 1401)\n",
+      "Shape of straight segment 5: (245, 1401)\n",
       "\n",
-      "len(samples) == end? True\n"
+      "Shape of stair segment 6: (245, 1401)\n",
+      "Shape of straight segment 6: (245, 1401)\n",
+      "\n",
+      "Shape of stair segment 7: (245, 1401)\n",
+      "Shape of straight segment 7: (245, 1401)\n",
+      "\n",
+      "Shape of stair segment 8: (245, 1401)\n",
+      "Shape of straight segment 8: (245, 1401)\n",
+      "\n",
+      "Shape of stair segment 9: (245, 1401)\n",
+      "Shape of straight segment 9: (245, 1401)\n",
+      "\n",
+      "Shape of stair segment 10: (245, 1401)\n",
+      "Shape of straight segment 10: (245, 1401)\n",
+      "\n",
+      "Shape of stair segment 11: (245, 1401)\n",
+      "Shape of straight segment 11: (245, 1401)\n",
+      "\n",
+      "Shape of stair segment 12: (245, 1401)\n",
+      "Shape of straight segment 12: (245, 1401)\n",
+      "\n",
+      "Shape of stair segment 13: (245, 1401)\n",
+      "Shape of straight segment 13: (245, 1401)\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "from utils.tools import stairway, wavelet_to_moving_average, matrix_to_vectors\n",
+    "from sklearn.neighbors import NearestCentroid\n",
     "import numpy as np\n",
     "from scipy.io import wavfile\n",
     "from ssqueezepy import ssq_cwt\n",
     "import numpy as np\n",
+    "import soundfile as sf\n",
     "\n",
     "# Get wavelet from .wav file\n",
-    "def wav_to_wavelet(x):\n",
+    "def wav_to_wavelet(path, time_window=0.1):\n",
     "    '''\n",
     "    x: segment data (1D shape)\n",
+    "    time_window: time in seconds (s)\n",
     "    '''\n",
-    "    twx, wx, *_ = ssq_cwt(x)  # use wx\n",
-    "    yield np.abs(wx)\n",
+    "    track = sf.SoundFile(path)\n",
+    "    length = track.frames\n",
+    "\n",
+    "    can_seek = track.seekable() # To enable access to a file\n",
+    "    if not can_seek:\n",
+    "        raise ValueError(\"Not compatible with seeking\")\n",
+    "\n",
+    "    begin = 0\n",
+    "    sr = track.samplerate # sample rate\n",
+    "    start_frame = sr * begin\n",
+    "    sampling_window = int(time_window*sr)\n",
+    "    \n",
+    "    while begin < length:\n",
+    "        track.seek(start_frame)\n",
+    "        audio_section = track.read(sampling_window)\n",
+    "        twx, wx, *_ = ssq_cwt(audio_section)  # use wx\n",
+    "        yield np.abs(wx)\n",
+    "\n",
+    "        end = min(begin + sampling_window, length)\n",
+    "        begin = end\n",
+    "\n",
     "\n",
     "def stra(matrix, dis = 5):\n",
     "    shape = matrix.shape\n",
@@ -257,29 +302,18 @@
     "    clf.fit(y_train, x_train)\n",
     "    x = clf.predict(np.concatenate((y.reshape(-1, 1), x.reshape(-1, 1)), axis=-1))\n",
     "    return x.reshape(shape)\n",
-    "\n",
-    "def audio_source(path, sampling_window):\n",
-    "    sample_rate, samples = wavfile.read(path)\n",
-    "    begin = 0\n",
-    "\n",
-    "    while begin < len(samples):\n",
-    "        end = min(begin + sampling_window, len(samples))\n",
-    "        yield samples[begin:end]\n",
-    "        begin = end\n",
-    "\n",
-    "    print('len(samples) == end?', len(samples) == end)\n",
     "    \n",
     "path = 'wav/apple_and_lemmon.wav'\n",
     "window = 1000 # pooling window in MA function\n",
-    "sampling_window = 7000\n",
+    "time_window=0.1\n",
     "bins = 10 # number of bins in stairway function\n",
     "dis = 200 # distance between columns in stra function\n",
     "\n",
-    "for idx, segment in enumerate(audio_source(path, sampling_window)):\n",
-    "    ma_hist = stairway(wavelet_to_moving_average(next(wav_to_wavelet(segment)), window), bins)\n",
+    "for idx, wx in enumerate(wav_to_wavelet(path, time_window)):\n",
+    "    ma_hist = stairway(wavelet_to_moving_average(wx, window), bins)\n",
     "    print(f'Shape of stair segment {idx+1}: {ma_hist.shape}')\n",
     "    ma_hist_stra = stra(ma_hist, dis = dis)\n",
-    "    print(f'Shape of straight segment {idx+1}: {ma_hist_stra.shape}\\n')\n"
+    "    print(f'Shape of straight segment {idx+1}: {ma_hist_stra.shape}\\n')"
    ]
   }
  ],
