test memory of each process

--- a/test.ipynb
+++ b/test.ipynb
@@ -195,51 +195,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of stair segment 1: (245, 1401)\n",
-      "Shape of straight segment 1: (245, 1401)\n",
       "\n",
-      "Shape of stair segment 2: (245, 1401)\n",
-      "Shape of straight segment 2: (245, 1401)\n",
+      "Shape of stair segment 1: (269, 11001)\n",
+      "Shape of straight segment 1: (269, 11001)\n",
       "\n",
-      "Shape of stair segment 3: (245, 1401)\n",
-      "Shape of straight segment 3: (245, 1401)\n",
       "\n",
-      "Shape of stair segment 4: (245, 1401)\n",
-      "Shape of straight segment 4: (245, 1401)\n",
+      "Shape of stair segment 2: (269, 11001)\n",
+      "Shape of straight segment 2: (269, 11001)\n",
       "\n",
-      "Shape of stair segment 5: (245, 1401)\n",
-      "Shape of straight segment 5: (245, 1401)\n",
       "\n",
-      "Shape of stair segment 6: (245, 1401)\n",
-      "Shape of straight segment 6: (245, 1401)\n",
-      "\n",
-      "Shape of stair segment 7: (245, 1401)\n",
-      "Shape of straight segment 7: (245, 1401)\n",
-      "\n",
-      "Shape of stair segment 8: (245, 1401)\n",
-      "Shape of straight segment 8: (245, 1401)\n",
-      "\n",
-      "Shape of stair segment 9: (245, 1401)\n",
-      "Shape of straight segment 9: (245, 1401)\n",
-      "\n",
-      "Shape of stair segment 10: (245, 1401)\n",
-      "Shape of straight segment 10: (245, 1401)\n",
-      "\n",
-      "Shape of stair segment 11: (245, 1401)\n",
-      "Shape of straight segment 11: (245, 1401)\n",
-      "\n",
-      "Shape of stair segment 12: (245, 1401)\n",
-      "Shape of straight segment 12: (245, 1401)\n",
-      "\n",
-      "Shape of stair segment 13: (245, 1401)\n",
-      "Shape of straight segment 13: (245, 1401)\n",
+      "Shape of stair segment 3: (269, 11001)\n",
+      "Shape of straight segment 3: (269, 11001)\n",
       "\n"
      ]
     }
@@ -272,6 +245,7 @@
     "    sampling_window = int(time_window*sr)\n",
     "    \n",
     "    while begin < length:\n",
+    "        # Read and convert .wav file to wavelet\n",
     "        track.seek(start_frame)\n",
     "        audio_section = track.read(sampling_window)\n",
     "        twx, wx, *_ = ssq_cwt(audio_section)  # use wx\n",
@@ -305,7 +279,7 @@
     "    \n",
     "path = 'wav/apple_and_lemmon.wav'\n",
     "window = 1000 # pooling window in MA function\n",
-    "time_window=0.1\n",
+    "time_window=0.5\n",
     "bins = 10 # number of bins in stairway function\n",
     "dis = 200 # distance between columns in stra function\n",
     "\n",
@@ -313,7 +287,152 @@
     "    ma_hist = stairway(wavelet_to_moving_average(wx, window), bins)\n",
     "    print(f'Shape of stair segment {idx+1}: {ma_hist.shape}')\n",
     "    ma_hist_stra = stra(ma_hist, dis = dis)\n",
-    "    print(f'Shape of straight segment {idx+1}: {ma_hist_stra.shape}\\n')"
+    "    print(f'Shape of straight segment {idx+1}: {ma_hist_stra.shape}\\n')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **The checking memory function**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "import linecache\n",
+    "import os\n",
+    "import tracemalloc\n",
+    "\n",
+    "def display_top(snapshot, key_type='lineno', limit=3, seg=None):\n",
+    "    snapshot = snapshot.filter_traces((\n",
+    "        tracemalloc.Filter(False, \"<frozen importlib._bootstrap>\"),\n",
+    "        tracemalloc.Filter(False, \"<unknown>\"),\n",
+    "    ))\n",
+    "    top_stats = snapshot.statistics(key_type)\n",
+    "\n",
+    "    print(f\"Top {limit} lines of segment {seg}\")\n",
+    "    for index, stat in enumerate(top_stats[:limit], 1):\n",
+    "        frame = stat.traceback[0]\n",
+    "        # replace \"/path/to/module/file.py\" with \"module/file.py\"\n",
+    "        filename = os.sep.join(frame.filename.split(os.sep)[-2:])\n",
+    "        print(\"#%s: %s:%s: %.1f KiB\"\n",
+    "              % (index, filename, frame.lineno, stat.size / 1024))\n",
+    "        line = linecache.getline(frame.filename, frame.lineno).strip()\n",
+    "        if line:\n",
+    "            print('    %s' % line)\n",
+    "\n",
+    "    other = top_stats[limit:]\n",
+    "    if other:\n",
+    "        size = sum(stat.size for stat in other)\n",
+    "        print(\"%s other: %.1f KiB\" % (len(other), size / 1024))\n",
+    "    total = sum(stat.size for stat in top_stats)\n",
+    "    print(\"Total allocated size: %.1f KiB\" % (total / 1024))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.1) Check python memory after each piece"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------Python memory after seeking the segment 1--------------------\n",
+      "Top 3 lines of segment 1\n",
+      "#1: utils\\tools.py:90: 23119.4 KiB\n",
+      "    return np.array(all_dig)\n",
+      "#2: utils\\tools.py:89: 6.4 KiB\n",
+      "    all_dig.append(dig.tolist())\n",
+      "#3: <__array_function__ internals>:2: 1.3 KiB\n",
+      "35 other: 4.2 KiB\n",
+      "Total allocated size: 23131.2 KiB\n",
+      "--------------------Python memory after seeking the segment 2--------------------\n",
+      "Top 3 lines of segment 2\n",
+      "#1: _pocketfft\\basic.py:31: 68864.1 KiB\n",
+      "    return pfft.c2c(tmp, (axis,), forward, norm, out, workers)\n",
+      "#2: utils\\backend.py:38: 25218.8 KiB\n",
+      "    return np.zeros(shape, dtype=dtype)\n",
+      "#3: utils\\tools.py:90: 23119.4 KiB\n",
+      "    return np.array(all_dig)\n",
+      "120 other: 12894.8 KiB\n",
+      "Total allocated size: 130097.1 KiB\n",
+      "--------------------Python memory after seeking the segment 3--------------------\n",
+      "Top 3 lines of segment 3\n",
+      "#1: _pocketfft\\basic.py:31: 68864.1 KiB\n",
+      "    return pfft.c2c(tmp, (axis,), forward, norm, out, workers)\n",
+      "#2: utils\\backend.py:38: 25218.8 KiB\n",
+      "    return np.zeros(shape, dtype=dtype)\n",
+      "#3: utils\\tools.py:90: 23119.4 KiB\n",
+      "    return np.array(all_dig)\n",
+      "125 other: 12939.4 KiB\n",
+      "Total allocated size: 130141.7 KiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, wx in enumerate(wav_to_wavelet(path, time_window)):\n",
+    "    tracemalloc.start()\n",
+    "    ma_hist = stairway(wavelet_to_moving_average(wx, window), bins)\n",
+    "    ma_hist_stra = stra(ma_hist, dis = dis)\n",
+    "    print('-'*20 + f'Python memory after seeking the segment {idx+1}'+'-'*20)\n",
+    "    snapshot = tracemalloc.take_snapshot()\n",
+    "    display_top(snapshot, seg=idx+1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2) Check python memory after the last piece"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#################### Python memory after seeking the last piece ####################\n",
+      "Top 3 lines of segment final\n",
+      "#1: utils\\tools.py:90: 23119.4 KiB\n",
+      "    return np.array(all_dig)\n",
+      "#2: ipykernel_6856\\1449790929.py:32: 12609.5 KiB\n",
+      "    yield np.abs(wx)\n",
+      "#3: lib\\selectors.py:315: 288.1 KiB\n",
+      "    r, w, x = select.select(r, w, w, timeout)\n",
+      "201 other: 119.0 KiB\n",
+      "Total allocated size: 36135.9 KiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "tracemalloc.start()\n",
+    "for idx, wx in enumerate(wav_to_wavelet(path, time_window)):\n",
+    "    ma_hist = stairway(wavelet_to_moving_average(wx, window), bins)\n",
+    "    ma_hist_stra = stra(ma_hist, dis = dis)\n",
+    "    \n",
+    "print('#'*20 + ' Python memory after seeking the last piece '+'#'*20)\n",
+    "snapshot = tracemalloc.take_snapshot()\n",
+    "display_top(snapshot, seg='final')"
    ]
   }
  ],
@@ -333,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
