--- a/test.ipynb
+++ b/test.ipynb
@@ -195,21 +195,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       "Shape of stair segment 1: (269, 11001)\n",
       "Shape of straight segment 1: (269, 11001)\n",
       "\n",
-      "\n",
       "Shape of stair segment 2: (269, 11001)\n",
       "Shape of straight segment 2: (269, 11001)\n",
-      "\n",
       "\n",
       "Shape of stair segment 3: (269, 11001)\n",
       "Shape of straight segment 3: (269, 11001)\n",
@@ -300,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -358,9 +355,10 @@
       "    return np.array(all_dig)\n",
       "#2: utils\\tools.py:89: 6.4 KiB\n",
       "    all_dig.append(dig.tolist())\n",
-      "#3: <__array_function__ internals>:2: 1.3 KiB\n",
-      "35 other: 4.2 KiB\n",
-      "Total allocated size: 23131.2 KiB\n",
+      "#3: ipykernel\\iostream.py:458: 0.1 KiB\n",
+      "    def _schedule_in_thread():\n",
+      "17 other: 0.8 KiB\n",
+      "Total allocated size: 23126.7 KiB\n",
       "--------------------Python memory after seeking the segment 2--------------------\n",
       "Top 3 lines of segment 2\n",
       "#1: _pocketfft\\basic.py:31: 68864.1 KiB\n",
@@ -369,8 +367,8 @@
       "    return np.zeros(shape, dtype=dtype)\n",
       "#3: utils\\tools.py:90: 23119.4 KiB\n",
       "    return np.array(all_dig)\n",
-      "120 other: 12894.8 KiB\n",
-      "Total allocated size: 130097.1 KiB\n",
+      "74 other: 12922.8 KiB\n",
+      "Total allocated size: 130125.1 KiB\n",
       "--------------------Python memory after seeking the segment 3--------------------\n",
       "Top 3 lines of segment 3\n",
       "#1: _pocketfft\\basic.py:31: 68864.1 KiB\n",
@@ -379,8 +377,8 @@
       "    return np.zeros(shape, dtype=dtype)\n",
       "#3: utils\\tools.py:90: 23119.4 KiB\n",
       "    return np.array(all_dig)\n",
-      "125 other: 12939.4 KiB\n",
-      "Total allocated size: 130141.7 KiB\n"
+      "84 other: 12963.3 KiB\n",
+      "Total allocated size: 130165.6 KiB\n"
      ]
     }
    ],
@@ -404,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -415,12 +413,12 @@
       "Top 3 lines of segment final\n",
       "#1: utils\\tools.py:90: 23119.4 KiB\n",
       "    return np.array(all_dig)\n",
-      "#2: ipykernel_6856\\1449790929.py:32: 12609.5 KiB\n",
+      "#2: ipykernel_4180\\2816025057.py:32: 12609.5 KiB\n",
       "    yield np.abs(wx)\n",
       "#3: lib\\selectors.py:315: 288.1 KiB\n",
       "    r, w, x = select.select(r, w, w, timeout)\n",
-      "201 other: 119.0 KiB\n",
-      "Total allocated size: 36135.9 KiB\n"
+      "150 other: 141.1 KiB\n",
+      "Total allocated size: 36158.1 KiB\n"
      ]
     }
    ],
@@ -433,6 +431,32 @@
     "print('#'*20 + ' Python memory after seeking the last piece '+'#'*20)\n",
     "snapshot = tracemalloc.take_snapshot()\n",
     "display_top(snapshot, seg='final')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = []\n",
+    "print(len(a))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://stackoverflow.com/questions/58944777/pytest-is-there-a-way-to-report-memory-usage-of-a-test"
    ]
   }
  ],
@@ -452,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
