--- a/test.ipynb
+++ b/test.ipynb
@@ -195,22 +195,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of stair segment 1: (269, 11001)\n",
-      "Shape of straight segment 1: (269, 11001)\n",
-      "\n",
-      "Shape of stair segment 2: (269, 11001)\n",
-      "Shape of straight segment 2: (269, 11001)\n",
-      "\n",
-      "Shape of stair segment 3: (269, 11001)\n",
-      "Shape of straight segment 3: (269, 11001)\n",
-      "\n"
+      "Shape of stair segment 1: (269, 1)\n",
+      "(269, 12000) (269, 1) (269, 1)\n",
+      "Shape of stair segment 2: (269, 1)\n",
+      "(269, 12000) (269, 1) (269, 1)\n",
+      "Shape of stair segment 3: (269, 1)\n",
+      "(269, 12000) (269, 1) (269, 1)\n"
      ]
     }
    ],
@@ -275,7 +272,7 @@
     "    return x.reshape(shape)\n",
     "    \n",
     "path = 'wav/apple_and_lemmon.wav'\n",
-    "window = 1000 # pooling window in MA function\n",
+    "window = 12000 # pooling window in MA function\n",
     "time_window=0.5\n",
     "bins = 10 # number of bins in stairway function\n",
     "dis = 200 # distance between columns in stra function\n",
@@ -283,8 +280,9 @@
     "for idx, wx in enumerate(wav_to_wavelet(path, time_window)):\n",
     "    ma_hist = stairway(wavelet_to_moving_average(wx, window), bins)\n",
     "    print(f'Shape of stair segment {idx+1}: {ma_hist.shape}')\n",
+    "    print(wx.shape, wavelet_to_moving_average(wx, window).shape, stairway(wavelet_to_moving_average(wx, window), bins).shape)\n",
     "    ma_hist_stra = stra(ma_hist, dis = dis)\n",
-    "    print(f'Shape of straight segment {idx+1}: {ma_hist_stra.shape}\\n')\n"
+    "    # print(f'Shape of straight segment {idx+1}: {ma_hist_stra.shape}\\n')\n"
    ]
   },
   {
@@ -434,6 +432,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=3\n",
+    "eval(str(a))"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -458,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
