testing changed ram in interior

--- a/test.ipynb
+++ b/test.ipynb
@@ -195,19 +195,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of stair segment 1: (269, 1)\n",
-      "(269, 12000) (269, 1) (269, 1)\n",
-      "Shape of stair segment 2: (269, 1)\n",
-      "(269, 12000) (269, 1) (269, 1)\n",
-      "Shape of stair segment 3: (269, 1)\n",
-      "(269, 12000) (269, 1) (269, 1)\n"
+      "Shape of stair segment 1: (269, 11001)\n",
+      "Shape of straight segment 1: (269, 11001)\n",
+      "\n",
+      "the percentage of used RAM:  51.2\n",
+      "the percentage of available memory:  48.78864563787238\n",
+      "Shape of stair segment 2: (269, 11001)\n",
+      "Shape of straight segment 2: (269, 11001)\n",
+      "\n",
+      "the percentage of used RAM:  51.1\n",
+      "the percentage of available memory:  48.85401537853301\n",
+      "Shape of stair segment 3: (269, 11001)\n",
+      "Shape of straight segment 3: (269, 11001)\n",
+      "\n",
+      "the percentage of used RAM:  51.2\n",
+      "the percentage of available memory:  48.83380141444681\n"
      ]
     }
    ],
@@ -272,17 +281,22 @@
     "    return x.reshape(shape)\n",
     "    \n",
     "path = 'wav/apple_and_lemmon.wav'\n",
-    "window = 12000 # pooling window in MA function\n",
+    "window = 1000 # pooling window in MA function\n",
     "time_window=0.5\n",
     "bins = 10 # number of bins in stairway function\n",
     "dis = 200 # distance between columns in stra function\n",
     "\n",
+    "import psutil\n",
+    "\n",
     "for idx, wx in enumerate(wav_to_wavelet(path, time_window)):\n",
     "    ma_hist = stairway(wavelet_to_moving_average(wx, window), bins)\n",
     "    print(f'Shape of stair segment {idx+1}: {ma_hist.shape}')\n",
-    "    print(wx.shape, wavelet_to_moving_average(wx, window).shape, stairway(wavelet_to_moving_average(wx, window), bins).shape)\n",
     "    ma_hist_stra = stra(ma_hist, dis = dis)\n",
-    "    # print(f'Shape of straight segment {idx+1}: {ma_hist_stra.shape}\\n')\n"
+    "    print(f'Shape of straight segment {idx+1}: {ma_hist_stra.shape}\\n')\n",
+    "\n",
+    "    print('')\n",
+    "    print('the percentage of used RAM: ', psutil.virtual_memory().percent)\n",
+    "    print('the percentage of available memory: ', psutil.virtual_memory().available * 100 / psutil.virtual_memory().total)\n"
    ]
   },
   {
@@ -433,23 +447,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the percentage of used RAM:  47.7\n",
+      "the percentage of available memory:  52.320493124237004\n"
+     ]
     }
    ],
    "source": [
-    "a=3\n",
-    "eval(str(a))"
+    "import psutil\n",
+    "print('the percentage of used RAM: ', psutil.virtual_memory().percent)\n",
+    "print('the percentage of available memory: ', psutil.virtual_memory().available * 100 / psutil.virtual_memory().total)"
    ]
   },
   {
