the final testing function

--- a/test.ipynb
+++ b/test.ipynb
@@ -460,9 +460,8 @@
     }
    ],
    "source": [
-    "import psutil\n",
-    "print('the percentage of used RAM: ', psutil.virtual_memory().percent)\n",
-    "print('the percentage of available memory: ', psutil.virtual_memory().available * 100 / psutil.virtual_memory().total)"
+    "assert wx.shape[0] == ma_hist.shape[0], f\"The number of rows in matrices must be equated, but they are {wx.shape[0]} and {ma_hist.shape[0]} of wx and ma_hist respectively\"\n",
+    "assert wx.shape[0] == ma_hist_stra.shape[0], f\"The number of rows in matrices must be equated, but they are {wx.shape[0]} and {ma_hist_stra.shape[0]} of wx and ma_hist_stra respectively\"    \n"
    ]
   },
   {
@@ -490,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
